--- a/srcs/containers/backend/Dockerfile
+++ b/srcs/containers/backend/Dockerfile
@@ -1,2 +1,9 @@
 FROM node:18
 
+WORKDIR /app
+
+COPY ./conf/package.json /app/package.json
+RUN npm install
+COPY ./volume-backend /app/
+
+CMD ["npm", "start"]
