empezando la comunicacion front-back

--- a/srcs/containers/backend/Dockerfile
+++ b/srcs/containers/backend/Dockerfile
@@ -2,8 +2,10 @@ FROM node:18
 
 WORKDIR /app
 
-COPY ./conf/package.json /app/package.json
+COPY ./conf/package.json ./package.json
 RUN npm install
-COPY ./volume-backend /app/
+COPY ./volume-backend ./volume-backend
+
+EXPOSE 3000
 
 CMD ["npm", "start"]
