--- a/srcs/containers/frontend/Dockerfile
+++ b/srcs/containers/frontend/Dockerfile
@@ -1,13 +1,22 @@
-FROM nginx:1.24.0
+FROM node:24
 
-COPY ./volume-frontend/public/index.html /usr/share/nginx/html/index.html
+RUN apt-get update && apt-get install -y nginx
+
+WORKDIR /app
+
+COPY ./conf/package.json /package.json
+
+RUN npm install
+
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
-#COPY ./volume-frontend/index.js/ /usr/share/nginx/html/index.js
+COPY ./volume-frontend/public/index.html /usr/share/nginx/html/index.html
 COPY ./volume-frontend /app/volume-frontend
+RUN mv /app/volume-frontend/index.js /usr/share/nginx/html/index.js
 
-# Ensure favicon and well-known files are available at /app/ so requests to
-# /favicon.ico and /.well-known/... don't return 404 from nginx (location / uses root /app/)
-COPY ./volume-frontend/public/favicon.ico /app/favicon.ico
+COPY ./volume-frontend/public/favicon.ico /favicon.ico
 #COPY ./volume-frontend/public/.well-known /app/.well-known
 
-EXPOSE 8080
+EXPOSE 5000
+
+CMD ["npm", "start"]
+#CMD ["nginx", "-g", "daemon off;"]
