--- a/srcs/containers/frontend/conf/nginx.conf
+++ b/srcs/containers/frontend/conf/nginx.conf
@@ -1,52 +1,72 @@
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
-
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+error_log /var/log/nginx/error.log;
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
-    worker_connections  1024;
+	worker_connections 768;
+	# multi_accept on;
 }
-
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+	##
+	# Basic Settings
+	##
 
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    #include /etc/nginx/conf.d/*.conf;
     server {
-        listen       80;
-        server_name  localhost;
+        listen 5000;
+        server_name localhost;
 
-        #access_log  /var/log/nginx/host.access.log  main;
+        root /usr/share/nginx/html;
+        index index.html;
 
         location / {
-            root   /app/;
-            index  ../usr/share/nginx/html/index.html;
+            try_files $uri /index.html;
         }
+    }
+	sendfile on;
+	tcp_nopush on;
+	types_hash_max_size 2048;
+	# server_tokens off;
 
-        #error_page  404              /404.html;
+	# server_names_hash_bucket_size 64;
+	# server_name_in_redirect off;
 
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-}
+	include /etc/nginx/mime.types;
+	default_type application/octet-stream;
 
+	##
+	# SSL Settings
+	##
+
+	# ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+	# ssl_prefer_server_ciphers on;
+
+	##
+	# Logging Settings
+	##
+
+	access_log /var/log/nginx/access.log;
+
+	##
+	# Gzip Settings
+	##
+
+	gzip on;
+
+	# gzip_vary on;
+	# gzip_proxied any;
+	# gzip_comp_level 6;
+	# gzip_buffers 16 8k;
+	# gzip_http_version 1.1;
+	# gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+	##
+	# Virtual Host Configs
+	##
+
+	include /etc/nginx/conf.d/*.conf;
+	include /etc/nginx/sites-enabled/*;
 }
