logre connectar proxy inverso al frontend

--- a/srcs/containers/frontend/conf/nginx.conf
+++ b/srcs/containers/frontend/conf/nginx.conf
@@ -23,7 +23,10 @@ http {
         index index.html;
 
         location / {
-            try_files $uri /index.html;
+            #try_files $uri /index.html;
+			add_header Cache-Control "no-cache, no-store, must-revalidate";
+			add_header Pragma "no-cache";
+			add_header Expires 0;
         }
     }
 	sendfile on;
@@ -67,6 +70,6 @@ http {
 	# Virtual Host Configs
 	##
 
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+	# include /etc/nginx/conf.d/*.conf;
+	# include /etc/nginx/sites-enabled/*;
 }
