--- a/srcs/.env
+++ b/srcs/.env
@@ -1,1 +1,3 @@
-API_URL=http://localhost:3000
+BACKEND_ADDR=http://localhost:3000
+FRONTEND_ADDR=http://localhost:5000
+PROXY_ADDR=http://localhost:8443
