--- a/srcs/containers/frontend/Dockerfile
+++ b/srcs/containers/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:24
+FROM nginx:1.24.0
 
 RUN apt-get update && apt-get install -y nginx
 
@@ -6,17 +6,14 @@ WORKDIR /app
 
 COPY ./conf/package.json /package.json
 
-RUN npm install
-
-COPY ./conf/nginx.conf /etc/nginx/nginx.conf
-COPY ./volume-frontend/public/index.html /usr/share/nginx/html/index.html
-COPY ./volume-frontend /app/volume-frontend
-RUN mv /app/volume-frontend/index.js /usr/share/nginx/html/index.js
-
 COPY ./volume-frontend/public/favicon.ico /favicon.ico
 #COPY ./volume-frontend/public/.well-known /app/.well-known
 
+COPY ./volume-frontend/public/index.html /usr/share/nginx/html/index.html
+COPY ./volume-frontend /app/volume-frontend
+RUN mv /app/volume-frontend/index.js /usr/share/nginx/html/index.js
+COPY ./conf/nginx.conf /etc/nginx/nginx.conf
+
 EXPOSE 5000
 
-CMD ["npm", "start"]
-#CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
