--- a/srcs/containers/proxy/conf/nginx.conf
+++ b/srcs/containers/proxy/conf/nginx.conf
@@ -3,7 +3,7 @@ worker_processes  auto;
 
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
-
+load_module /etc/nginx/modules/ngx_http_modsecurity_module.so;
 
 events {
     worker_connections  1024;
@@ -21,13 +21,12 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
 
     keepalive_timeout  65;
 
-    #gzip  on;
-
-    #include /etc/nginx/conf.d/*.conf;
+    #modsecurity on;
+    #modsecurity_rules_file /opt/main.conf;
+    
     server {
         listen       443;
         server_name  localhost;
