--- a/srcs/containers/proxy/conf/nginx.conf
+++ b/srcs/containers/proxy/conf/nginx.conf
@@ -24,8 +24,8 @@ http {
 
     keepalive_timeout  65;
 
-    #modsecurity on;
-    #modsecurity_rules_file /opt/main.conf;
+    modsecurity on;
+    modsecurity_rules_file /opt/main.conf;
     
     server {
         listen       443;
