--- a/srcs/containers/proxy/conf/main.conf
+++ b/srcs/containers/proxy/conf/main.conf
@@ -1,3 +1,3 @@
-Include /opt/ModSecurity/modsecurity.conf;
-Include /usr/local/owasp-crs/crs-setup.conf;
-Include /usr/local/owasp-crs/rules/*.conf;
+Include /opt/ModSecurity/modsecurity.conf
+Include /usr/local/owasp-crs/crs-setup.conf
+Include /usr/local/owasp-crs/rules/*.conf
