--- a/srcs/containers/frontend/Dockerfile
+++ b/srcs/containers/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx:1.24.0
 
 RUN apt-get update && apt-get install -y nginx
 
-WORKDIR /app
+WORKDIR /usr/share/nginx/
 
 COPY ./conf/package.json /package.json
 
@@ -10,8 +10,10 @@ COPY ./volume-frontend/public/favicon.ico /favicon.ico
 #COPY ./volume-frontend/public/.well-known /app/.well-known
 
 COPY ./volume-frontend/public/index.html /usr/share/nginx/html/index.html
-COPY ./volume-frontend /app/volume-frontend
-RUN mv /app/volume-frontend/index.js /usr/share/nginx/html/index.js
+COPY ./volume-frontend ./volume-frontend
+RUN mv ./volume-frontend/public/style.css ./html/style.css
+RUN mv ./volume-frontend/fonts/ ./html/fonts/
+RUN mv ./volume-frontend/index.js /usr/share/nginx/html/index.js
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 5000
