--- a/srcs/containers/frontend/Dockerfile
+++ b/srcs/containers/frontend/Dockerfile
@@ -13,6 +13,7 @@ COPY ./volume-frontend/public/index.html /usr/share/nginx/html/index.html
 COPY ./volume-frontend ./volume-frontend
 RUN mv ./volume-frontend/public/style.css ./html/style.css
 RUN mv ./volume-frontend/fonts/ ./html/fonts/
+RUN mv ./volume-frontend/images/ ./html/images/
 RUN mv ./volume-frontend/index.js /usr/share/nginx/html/index.js
 COPY ./conf/nginx.conf /etc/nginx/nginx.conf
 
