anyadiendo base de datos

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,10 @@
 BACKEND_ADDR=http://localhost:3000
 FRONTEND_ADDR=http://localhost:5000
 PROXY_ADDR=http://localhost:8443
+
+VAULT_TOKEN_ID=token
+
+#MARIADB_ROOT_PASSWORD=rootpass
+#MARIADB_ROOT_PASSWORD_HASH=1234
+MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=true
+MARIADB_RANDOM_ROOT_PASSWORD=XD
