--- a/srcs/containers/backend/Dockerfile
+++ b/srcs/containers/backend/Dockerfile
@@ -6,6 +6,8 @@ COPY ./conf/package.json ./package.json
 RUN npm install
 COPY ./volume-backend ./volume-backend
 
+RUN npm install mariadb
+
 EXPOSE 3000
 
 CMD ["npm", "start"]
