--- a/srcs/containers/backend/Dockerfile
+++ b/srcs/containers/backend/Dockerfile
@@ -7,6 +7,8 @@ RUN npm install
 COPY ./volume-backend ./volume-backend
 
 RUN npm install mariadb
+RUN npm install axios
+RUN npm install dotenv
 
 EXPOSE 3000
 
