--- a/srcs/containers/frontend/conf/package.json
+++ b/srcs/containers/frontend/conf/package.json
@@ -6,6 +6,10 @@
     "scripts": {
         "start": "npx http-server -p 5000 ./src"
     },
+    "dependencies": {
+        "dotenv": "17.2.0",
+        "axios": "1.10.0"
+    },
     "devDependencies": {
         "http-server": "^14.1.1"
   }
