--- a/srcs/containers/proxy/conf/nginx.conf
+++ b/srcs/containers/proxy/conf/nginx.conf
@@ -47,7 +47,7 @@ http {
 
         }
 
-        location /api/ {
+        location /backend/ {
             proxy_pass http://backend:3000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
