anyadiendo verificacion de nombre de usuario, email y encryptando contrasenya en base de datos

--- a/srcs/containers/backend/Dockerfile
+++ b/srcs/containers/backend/Dockerfile
@@ -9,6 +9,7 @@ COPY ./volume-backend ./volume-backend
 RUN npm install mariadb
 RUN npm install axios
 RUN npm install dotenv
+RUN npm install bcryptjs
 
 EXPOSE 3000
 
