--- a/srcs/containers/frontend/conf/package.json
+++ b/srcs/containers/frontend/conf/package.json
@@ -8,7 +8,8 @@
     },
     "dependencies": {
         "dotenv": "17.2.0",
-        "axios": "1.10.0"
+        "axios": "1.10.0",
+        "bcryptjs": "2.4.3"
     },
     "devDependencies": {
         "http-server": "^14.1.1"
