puedo enviar emails

--- a/srcs/.env
+++ b/srcs/.env
@@ -8,3 +8,6 @@ MYSQL_ROOT_PASSWORD=rootpass
 #MARIADB_ROOT_PASSWORD_HASH=1234
 MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=true
 MARIADB_RANDOM_ROOT_PASSWORD=XD
+
+EMAIL_DOMAIN=camagru.app.project@gmail.com
+EMAIL_PASSWORD=kibe mgkj fdns fryh
