--- a/srcs/containers/frontend/conf/package.json
+++ b/srcs/containers/frontend/conf/package.json
@@ -9,7 +9,8 @@
     "dependencies": {
         "dotenv": "17.2.0",
         "axios": "1.10.0",
-        "bcryptjs": "2.4.3"
+        "bcryptjs": "2.4.3",
+        "nodemailer": "6.9.4"
     },
     "devDependencies": {
         "http-server": "^14.1.1"
