haciendo email de conffirmacion

--- a/srcs/.env
+++ b/srcs/.env
@@ -11,3 +11,5 @@ MARIADB_RANDOM_ROOT_PASSWORD=XD
 
 EMAIL_DOMAIN=camagru.app.project@gmail.com
 EMAIL_PASSWORD=kibe mgkj fdns fryh
+
+GITIGNORE_CHECK=XD
