arreglando errores y anyadiendo pathnames

--- a/srcs/.env
+++ b/srcs/.env
@@ -10,6 +10,6 @@ MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=true
 MARIADB_RANDOM_ROOT_PASSWORD=XD
 
 EMAIL_DOMAIN=camagru.app.project@gmail.com
-EMAIL_PASSWORD=kibe mgkj fdns fryh
+EMAIL_PASSWORD=jrrp uech ifjw iedr 
 
 GITIGNORE_CHECK=XD
