--- a/srcs/containers/frontend/Dockerfile
+++ b/srcs/containers/frontend/Dockerfile
@@ -9,8 +9,8 @@ COPY ./conf/package.json /package.json
 #COPY ./volume-frontend/public/favicon.ico /favicon.ico
 #COPY ./volume-frontend/public/.well-known /app/.well-known
 
-COPY ./volume-frontend/public/index.html ./index.html
 COPY ./volume-frontend ./volume-frontend
+RUN mv ./volume-frontend/public/index.html ./index.html
 RUN mv ./volume-frontend/public/style.css ./style.css
 RUN mv ./volume-frontend/fonts/ ./fonts/
 RUN mv ./volume-frontend/images/ ./images/
