checkeo de emails

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,11 +1,11 @@
 BACKEND_ADDR=http://backend:3000
 FRONTEND_ADDR=http://frontend:5000
 PROXY_ADDR=http://proxy:8443
+SERVER_ADDR=http://localhost:8443
 
 VAULT_TOKEN_ID=token
 
 MYSQL_ROOT_PASSWORD=rootpass
-#MARIADB_ROOT_PASSWORD_HASH=1234
 MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=true
 MARIADB_RANDOM_ROOT_PASSWORD=XD
 
