--- a/srcs/containers/frontend/conf/nginx.conf
+++ b/srcs/containers/frontend/conf/nginx.conf
@@ -23,7 +23,7 @@ http {
         index index.html;
 
         location / {
-            #try_files $uri /index.html;
+            try_files $uri /index.html;
 			add_header Cache-Control "no-cache, no-store, must-revalidate";
 			add_header Pragma "no-cache";
 			add_header Expires 0;
